--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -798,7 +798,7 @@
       <div class="currcle-rotate"><div class="rotate rotate1"></div></div>
       <img
         id="avater-img"
-        src="/assets/image/imagesss.jpg"
+        src="/assets/image/image1.jpg"
         alt="Riaj avater"
       />
     </div>
